--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -18,12 +18,12 @@ extra-source-files:  README.markdown
 library
   hs-source-dirs:      src
   exposed-modules:     Foreign.CloudI
-                     , Foreign.CloudI.Instance
                      , Foreign.Erlang
                      , Foreign.Erlang.Pid
                      , Foreign.Erlang.Port
                      , Foreign.Erlang.Reference
                      , Foreign.Erlang.Function
+  other-modules:       Foreign.CloudI.Instance
   ghc-options:         -Wall -Werror -funbox-strict-fields
   build-depends:       base >= 4.5.0
                      , binary >= 0.8.4.0
