--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -1,5 +1,5 @@
 name:                cloudi
-version:             0.0.0.1
+version:             1.7.0
 synopsis:            Haskell CloudI API
 description:         Haskell CloudI API
 homepage:            https://github.com/CloudI/cloudi_api_haskell
@@ -12,6 +12,7 @@ category:            Foreign
 stability:           provisional
 build-type:          Simple
 cabal-version:       >= 1.22
+tested-with:         GHC == 7.10.3, GHC == 8.0.2
 extra-source-files:  README.markdown
 
 library
@@ -23,8 +24,8 @@ library
                      , Foreign.Erlang.Reference
                      , Foreign.Erlang.Function
   other-modules:       Foreign.CloudI.Instance
-  ghc-options:       -Wall -Werror -funbox-strict-fields
-  build-depends:       base >= 4.8.2.0
+  ghc-options:       -Wall -funbox-strict-fields
+  build-depends:       base >= 4.8.2.0 && < 5
                      , binary >= 0.8.4.0
                      , bytestring >= 0.10.4
                      , array
