--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -1,5 +1,5 @@
 name:                cloudi
-version:             1.7.0
+version:             1.7.1
 synopsis:            Haskell CloudI API
 description:         Haskell CloudI API
 homepage:            https://github.com/CloudI/cloudi_api_haskell
@@ -13,7 +13,7 @@ stability:           provisional
 build-type:          Simple
 cabal-version:       >= 1.22
 tested-with:         GHC == 7.10.3, GHC == 8.0.2
-extra-source-files:  README.markdown
+extra-source-files:  README.markdown changelog.md
 
 library
   hs-source-dirs:    src
