--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -1,5 +1,5 @@
 name:                cloudi
-version:             1.7.2
+version:             1.7.3
 synopsis:            Haskell CloudI API
 description:         Haskell CloudI API
 homepage:            https://github.com/CloudI/cloudi_api_haskell
@@ -7,7 +7,7 @@ license:             MIT
 license-file:        LICENSE
 author:              Michael Truog
 maintainer:          mjtruog@gmail.com
-copyright:           2017 Michael Truog
+copyright:           2017-2018 Michael Truog
 category:            Foreign
 stability:           provisional
 build-type:          Simple
