--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -6,7 +6,7 @@ homepage:            https://github.com/CloudI/cloudi_api_haskell
 license:             MIT
 license-file:        LICENSE
 author:              Michael Truog
-maintainer:          mjtruog@protonmail.com
+maintainer:          mjtruog at protonmail dot com
 copyright:           2017-2018 Michael Truog
 category:            Foreign
 stability:           provisional
