--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -17,6 +17,7 @@ tested-with:           GHC == 7.10.3
                      , GHC == 8.2.2
                      , GHC == 8.4.3
                      , GHC == 8.6.5
+                     , GHC == 8.8.1
 extra-source-files:  README.markdown changelog.md
 
 library
