--- a/cloudi.cabal
+++ b/cloudi.cabal
@@ -1,5 +1,5 @@
 name:                cloudi
-version:             1.7.5
+version:             1.8.0
 synopsis:            Haskell CloudI API
 description:         Haskell CloudI API (see https://cloudi.org for more details)
 homepage:            https://github.com/CloudI/cloudi_api_haskell
@@ -20,6 +20,11 @@ tested-with:           GHC == 7.10.3
                      , GHC == 8.8.1
 extra-source-files:  README.markdown changelog.md
 
+flag dev
+  description:        Turn on development settings.
+  manual:             True
+  default:            False
+
 library
   hs-source-dirs:    src
   exposed-modules:     Foreign.CloudI
@@ -29,8 +34,11 @@ library
                      , Foreign.Erlang.Reference
                      , Foreign.Erlang.Function
   other-modules:       Foreign.CloudI.Instance
-  ghc-options:       -Wall -funbox-strict-fields
-  build-depends:       base >= 4.8.2.0 && < 5
+  if flag(dev)
+    ghc-options:     -Wall -Werror -funbox-strict-fields
+  else
+    ghc-options:     -Wall -funbox-strict-fields
+  build-depends:       base >= 4.8.2.0 && < 5.0
                      , binary >= 0.8.4.0
                      , bytestring >= 0.10.4
                      , network >= 3.0.0.0
